[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/game_selection.gd" type="Script" id=1]
[ext_resource path="res://fonts/dos.fnt" type="BitmapFont" id=2]
[ext_resource path="res://sprites/textButtonUP.png" type="Texture" id=3]
[ext_resource path="res://sprites/textButtonDOWN.png" type="Texture" id=4]

[node name="game_selection" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Label_title" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 319.0
margin/top = 15.0
margin/right = -329.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 2 )
text = "Select board"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_2x2" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 282.0
margin/top = 120.0
margin/right = 12.0
margin/bottom = 210.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0546875, 1, 0, 1 )
text = "2 x 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_3x3" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -47.0
margin/top = 123.0
margin/right = -317.0
margin/bottom = 213.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0546875, 1, 0, 1 )
text = "3 x 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_5x4" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 284.0
margin/top = 206.0
margin/right = 14.0
margin/bottom = 296.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0546875, 1, 0, 1 )
text = "5 x 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_6x5" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -47.0
margin/top = 210.0
margin/right = -317.0
margin/bottom = 300.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0546875, 1, 0, 1 )
text = "6 x 5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_7x6" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 117.0
margin/top = 297.0
margin/right = -153.0
margin/bottom = 387.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0546875, 1, 0, 1 )
text = "7 x 6"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 391.0
margin/right = -86.0
margin/bottom = 455.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.75, 0.5 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="TextureButton"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 9.0
margin/right = 339.0
margin/bottom = 99.0
custom_fonts/font = ExtResource( 2 )
text = "Return"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="Label_2x2" to="." method="_on_Label_2x2_input_event"]

[connection signal="input_event" from="Label_3x3" to="." method="_on_Label_3x3_input_event"]

[connection signal="input_event" from="Label_5x4" to="." method="_on_Label_5x4_input_event"]

[connection signal="input_event" from="Label_6x5" to="." method="_on_Label_6x5_input_event"]

[connection signal="input_event" from="Label_7x6" to="." method="_on_Label_7x6_input_event"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


